# SmartFloorplan

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  SmartFloorplan.sln  SmartVLSI.sln
Deploy/: BestResult.md
Deploy/Instance/GSRC/HARD/: GSRC_init.csv  n10.html  n10.pl  n100.html  n200.html  n30.html  n300.html  n50.html  n50.pl
Deploy/Instance/GSRC/SOFT/: n10.blocks  n30.blocks  n50.blocks
Deploy/Instance/MCNC/HARD/: ami49.html  apte.html
Deploy/Instance/METISgraphs/: graph.txt
Deploy/Solution/GSRC/: n10.200902095906.fp  n100.200902100348.fp  n100.fp  n200.fp  n300.fp
Deploy/Solution/MCNC/: ami33.200901221039.fp  ami33.fp
Floorplan/: AdaptiveSelecter.hpp  AdaptiveSelection.hpp  BeamSearcher.hpp  CMakeLists.txt  Config.hpp  Data.hpp  Floorplan.cpp  Floorplan.vcxproj  Floorplan.vcxproj.filters  FloorplanBinPack.hpp  FloorplanPacker.hpp  GuillotineBinPack.cpp  GuillotineBinPack.h  GuillotineBinPack.hpp  Instance.hpp  Main.cpp  QAPCluster.hpp  QAPSolver.hpp  RandomLocalSearcher.hpp  Rect.hpp  SkylineBinPack.hpp  Tester.hpp  Utils.hpp  Visualize.hpp  Visualizer.hpp
Instance/GSRCbench/HARD/: n30.pl  n300.pl
Instance/MCNCbench/HARD/: ami33.blocks  ami49.pl  apte.pl
Lib/gurobi/lib/: gurobi80.lib  gurobi_c++md2017.lib  gurobi_c++mdd2017.lib  gurobi_c++mt2017.lib  gurobi_c++mtd2017.lib
Lib/metis/case/: graph_a.txt  partition_a.txt
Lib/metis/lib/: metis.lib
MetisTester/: MetisTester.cpp  MetisTester.vcxproj  MetisTester.vcxproj.filters
QAPSolver/: QAPSolver.hpp  QAPSolver.vcxproj  QAPSolver.vcxproj.filters
